--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         }
     </script>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIINfBTx67dVSaPVzEnCwSg6gWq24G58A3o="
+        crossorigin=""/>
+    
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -99,6 +103,12 @@
         </footer>
 
     </div>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20n6a9Kx8lF+4C6rR2bY7Qz1vQVSy4iGTq4d/H9L5A4="
+        crossorigin=""></script>
+        
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script src="scripts/main.js"></script>
 
