--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     </div>
 
                     <div class="graph-box bg-card-bg p-5 rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]" id="graph-sea-level">
-                        <h3 class="text-xl font-semibold text-white mb-3 border-b border-gray-700 pb-2">Sea Level Change</h3>
-                        <canvas id="chart-sea" class="w-full h-[24rem]"></canvas>
+                        <h3 class="text-xl font-semibold text-white mb-3 border-b border-gray-700 pb-2">Percepition Rate</h3>
+                        <canvas id="chart-precip" class="w-full h-[24rem]"></canvas>
                     </div>
 
                     <div class="graph-box bg-card-bg p-5 rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]" id="graph-co2">
