--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="charts-grid grid grid-cols-1 md:grid-cols-2 gap-6">
         
                     <div class="graph-box bg-card-bg p-5 rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]" id="graph-temp-anomaly">
-                        <h3 class="text-xl font-semibold text-white mb-3 border-b border-gray-700 pb-2">Temperature Anomaly</h3>
+                        <h3 class="text-xl font-semibold text-white mb-3 border-b border-gray-700 pb-2">Average Temperature </h3>
                         <canvas id="chart-temp" class="w-full h-[24rem]"></canvas>
                     </div>
 
@@ -88,8 +88,8 @@
                     </div>
 
                     <div class="graph-box bg-card-bg p-5 rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]" id="graph-co2">
-                        <h3 class="text-xl font-semibold text-white mb-3 border-b border-gray-700 pb-2">Atmospheric CO₂</h3>
-                        <canvas id="chart-co2" class="w-full h-[24rem]"></canvas>
+                        <h3 class="text-xl font-semibold text-white mb-3 border-b border-gray-700 pb-2">Number of Extreme Rainfall Events</h3>
+                        <canvas id="chart-rain-days" class="w-full h-[24rem]"></canvas>
                     </div>
 
                     <div class="graph-box bg-card-bg p-5 rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1.02]" id="graph-custom">
